examples/test/testpolicy13376.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13376
  namespace: namespace242
spec:
  podSelector:
    matchLabels:
      key43: value47
      key40: value25
      key2: value19
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key30: value7
          key11: value21
      podSelector:
        matchLabels:
          key4: value25
